[package]
authors = ["lettenj61 <lettenj61@users.noreply.github.com>"]
description = "Macros for hasty, sketchy, funny Rust programming."
license = "Apache/MIT"
name = "rucky-macros"
version = "0.1.0"

[dependencies]

[dev-dependencies]
rand = "0.3"
regex = "0.2.1"
rustc-serialize = "0.3"
toml = "0.2"

[features]
default = []
