[package]
authors = ["lettenj61 <lettenj61@users.noreply.github.com>"]
description = "Macros for hasty, sketchy, funny Rust programming."
license = "MIT/Apache-2.0"
name = "rucky"
version = "0.1.0"
repository = "https://github.com/lettenj61/rucky"
keywords = [ "macro" ]

[dependencies]

[dev-dependencies]
libc = "0.2.19"
rand = "0.3"
regex = "0.2.1"
rustc-serialize = "0.3"
toml = "0.2"

[features]
default = []
